{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 308,
  "lineage": "f833f3df-2573-0333-4379-b26922660021",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1894118180",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-002520884413a02cc",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "egress": false,
            "network_acl_id": "acl-002520884413a02cc",
            "protocol": "6",
            "region": "us-east-2",
            "rule_number": 100
          },
          "dependencies": [
            "module.vpc.aws_network_acl.app_network_acl",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_inbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3896935476",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-002520884413a02cc",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 105,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "egress": false,
            "network_acl_id": "acl-002520884413a02cc",
            "protocol": "6",
            "region": "us-east-2",
            "rule_number": 105
          },
          "dependencies": [
            "module.vpc.aws_network_acl.app_network_acl",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_inbound_return_internet_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-902847921",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-002520884413a02cc",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 115,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "egress": false,
            "network_acl_id": "acl-002520884413a02cc",
            "protocol": "6",
            "region": "us-east-2",
            "rule_number": 115
          },
          "dependencies": [
            "module.vpc.aws_network_acl.app_network_acl",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2910005921",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-002520884413a02cc",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "egress": false,
            "network_acl_id": "acl-002520884413a02cc",
            "protocol": "6",
            "region": "us-east-2",
            "rule_number": 110
          },
          "dependencies": [
            "module.vpc.aws_network_acl.app_network_acl",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_outbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-355178854",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-002520884413a02cc",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 105,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "egress": true,
            "network_acl_id": "acl-002520884413a02cc",
            "protocol": "6",
            "region": "us-east-2",
            "rule_number": 105
          },
          "dependencies": [
            "module.vpc.aws_network_acl.app_network_acl",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_outbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4292442443",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-002520884413a02cc",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "egress": true,
            "network_acl_id": "acl-002520884413a02cc",
            "protocol": "6",
            "region": "us-east-2",
            "rule_number": 110
          },
          "dependencies": [
            "module.vpc.aws_network_acl.app_network_acl",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_outbound_return_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1685861668",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-002520884413a02cc",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "egress": true,
            "network_acl_id": "acl-002520884413a02cc",
            "protocol": "6",
            "region": "us-east-2",
            "rule_number": 100
          },
          "dependencies": [
            "module.vpc.aws_network_acl.app_network_acl",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "enable_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e5fd22b208c376ec",
            "id": "r-rtb-019591a70899d30ec1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-019591a70899d30ec",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-019591a70899d30ec"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.subnet_route_table",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "authorize_outbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202077789918:security-group-rule/sgr-097f13e1df14eecdb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound HTTP (80) (e.g., update apt cache)",
            "from_port": 80,
            "id": "sgr-097f13e1df14eecdb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-01e86a146e23c481d",
            "security_group_rule_id": "sgr-097f13e1df14eecdb",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "id": "sgr-097f13e1df14eecdb",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.web_server.aws_security_group.allow_access"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "authorize_outbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202077789918:security-group-rule/sgr-046375746b9d6953f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound HTTPS (443)",
            "from_port": 443,
            "id": "sgr-046375746b9d6953f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-01e86a146e23c481d",
            "security_group_rule_id": "sgr-046375746b9d6953f",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "id": "sgr-046375746b9d6953f",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.web_server.aws_security_group.allow_access"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "authorize_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202077789918:security-group-rule/sgr-0652fbb4a7733a244",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Authorize (allow) inbound HTTP (80)",
            "from_port": 80,
            "id": "sgr-0652fbb4a7733a244",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-01e86a146e23c481d",
            "security_group_rule_id": "sgr-0652fbb4a7733a244",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "id": "sgr-0652fbb4a7733a244",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.web_server.aws_security_group.allow_access"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "authorize_inbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202077789918:security-group-rule/sgr-0e76a3227df8dc096",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Authorize (allow) inbound HTTPS (443)",
            "from_port": 443,
            "id": "sgr-0e76a3227df8dc096",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-01e86a146e23c481d",
            "security_group_rule_id": "sgr-0e76a3227df8dc096",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "id": "sgr-0e76a3227df8dc096",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.web_server.aws_security_group.allow_access"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "authorize_inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202077789918:security-group-rule/sgr-0eeef771664accfdc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Authorize (allow) inbound SSH (e.g., to allow Ansible to connect to the instance)",
            "from_port": 22,
            "id": "sgr-0eeef771664accfdc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-01e86a146e23c481d",
            "security_group_rule_id": "sgr-0eeef771664accfdc",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "id": "sgr-0eeef771664accfdc",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.web_server.aws_security_group.allow_access"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "authorize_return_internet_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202077789918:security-group-rule/sgr-0ebd8ab5287583f79",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "When a client inside the instance made a request to a service running in the public internet it can have a port number between 1024-65535. So allow the client to receive the response from the service",
            "from_port": 1024,
            "id": "sgr-0ebd8ab5287583f79",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-01e86a146e23c481d",
            "security_group_rule_id": "sgr-0ebd8ab5287583f79",
            "tags": null,
            "tags_all": {},
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "id": "sgr-0ebd8ab5287583f79",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.web_server.aws_security_group.allow_access"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202077789918:internet-gateway/igw-0e5fd22b208c376ec",
            "id": "igw-0e5fd22b208c376ec",
            "owner_id": "202077789918",
            "region": "us-east-2",
            "tags": {
              "Name": "cloud-1-gw"
            },
            "tags_all": {
              "Name": "cloud-1-gw"
            },
            "vpc_id": "vpc-04659a61fac6f6be2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "id": "igw-0e5fd22b208c376ec",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app_network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202077789918:network-acl/acl-002520884413a02cc",
            "egress": [],
            "id": "acl-002520884413a02cc",
            "ingress": [],
            "owner_id": "202077789918",
            "region": "us-east-2",
            "subnet_ids": [],
            "tags": {
              "Name": "cloud-1-nacl"
            },
            "tags_all": {
              "Name": "cloud-1-nacl"
            },
            "vpc_id": "vpc-04659a61fac6f6be2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "associate_with_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0ee146a4fd41eed9c",
            "network_acl_id": "acl-002520884413a02cc",
            "region": "us-east-2",
            "subnet_id": "subnet-0a04a9afd232c8d30"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_network_acl.app_network_acl",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202077789918:route-table/rtb-019591a70899d30ec",
            "id": "rtb-019591a70899d30ec",
            "owner_id": "202077789918",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Name": "cloud-1-gw-rt"
            },
            "tags_all": {
              "Name": "cloud-1-gw-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04659a61fac6f6be2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "id": "rtb-019591a70899d30ec",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_with_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bb7cbf71d53ae17",
            "region": "us-east-2",
            "route_table_id": "rtb-019591a70899d30ec",
            "subnet_id": "subnet-0a04a9afd232c8d30"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "id": "rtbassoc-03bb7cbf71d53ae17",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.subnet_route_table",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202077789918:subnet/subnet-0a04a9afd232c8d30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.56.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a04a9afd232c8d30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "202077789918",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "cloud-1-subnet"
            },
            "tags_all": {
              "Name": "cloud-1-subnet"
            },
            "vpc_id": "vpc-04659a61fac6f6be2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "id": "subnet-0a04a9afd232c8d30",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202077789918:vpc/vpc-04659a61fac6f6be2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.56.0/24",
            "default_network_acl_id": "acl-04220f0ad38d5fb1f",
            "default_route_table_id": "rtb-0accb8767fa320cfb",
            "default_security_group_id": "sg-0c4802c55c5c69bcf",
            "dhcp_options_id": "dopt-0e4b6b17cd09a0da6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04659a61fac6f6be2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0accb8767fa320cfb",
            "owner_id": "202077789918",
            "region": "us-east-2",
            "tags": {
              "Name": "cloud-1-vpc"
            },
            "tags_all": {
              "Name": "cloud-1-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "id": "vpc-04659a61fac6f6be2",
            "region": "us-east-2"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d36360f59174aeba",
            "arn": "arn:aws:ec2:us-east-2:202077789918:instance/i-08eaad6b1e23052d9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08eaad6b1e23052d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "learn",
            "launch_template": [
              {
                "id": "lt-0fc6493774a817338",
                "name": "cloud-1-template",
                "version": "$Default"
              }
            ],
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-091a8897faa679df1"
              }
            ],
            "primary_network_interface_id": "eni-091a8897faa679df1",
            "private_dns": "ip-192-168-56-14.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.56.14",
            "public_dns": "ec2-3-139-78-91.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.78.91",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e4c78d1be40b1765",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a04a9afd232c8d30",
            "tags": {
              "Name": "cloud-1-instance",
              "UsedForAnsible": "1"
            },
            "tags_all": {
              "Name": "cloud-1-instance",
              "UsedForAnsible": "1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01e86a146e23c481d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "id": "i-08eaad6b1e23052d9",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc",
            "module.web_server.aws_launch_template.app",
            "module.web_server.aws_security_group.allow_access",
            "module.web_server.data.aws_ami.image"
          ]
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202077789918:security-group/sg-01e86a146e23c481d",
            "description": "Allow public traffic to access the instance",
            "egress": [],
            "id": "sg-01e86a146e23c481d",
            "ingress": [],
            "name": "allow-connection",
            "name_prefix": "",
            "owner_id": "202077789918",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud-1-sg"
            },
            "tags_all": {
              "Name": "cloud-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04659a61fac6f6be2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "202077789918",
            "id": "sg-01e86a146e23c481d",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}